checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000235491.e10aeb39c1d3567f1906ca36162c977c1b7c0672
WARNING:USE_RELATIVE_PATH: use relative pathname instead of absolute in changelog text
#43: 
  GEN     /home/alex/kernel/2.6.27/Makefile

WARNING:USE_RELATIVE_PATH: use relative pathname instead of absolute in changelog text
#46: 
  CALL    /home/alex/kernel/linux-2.6/scripts/checksyscalls.sh

WARNING:USE_RELATIVE_PATH: use relative pathname instead of absolute in changelog text
#55: 
/home/alex/kernel/linux-2.6/sound/pci/ca0106/ca0106_main.c:263: error:

ERROR:SPACING: space prohibited before that ',' (ctx:WxE)
#76: FILE: sound/pci/ca0106/ca0106_main.c:257:
+	   .spi_dac = 2 } ,
 	                  ^

Whitespace style used in the kernel sources is described in kernel docs.

See: https://www.kernel.org/doc/html/latest/process/coding-style.html#spaces

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000235491.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 1 errors, 3 warnings, 0 checks, 8 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000235491.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
